--- a/src/v2/styles/partials/_editor-content.scss
+++ b/src/v2/styles/partials/_editor-content.scss
@@ -285,6 +285,11 @@
   --ne-editor-content-callout-error-background-color: oklch(0.965 0.0223 13.09);
   --ne-editor-content-callout-success-background-color: oklch(0.9759 0.0289 145.42);
 
+  --ne-editor-content-callout-info-foreground-color: oklch(0.55 0.22 263);
+  --ne-editor-content-callout-warning-foreground-color: oklch(0.67 0.16 47);
+  --ne-editor-content-callout-error-foreground-color: oklch(0.58 0.24 28);
+  --ne-editor-content-callout-success-foreground-color: oklch(0.63 0.18 145);
+
   --ne-editor-content-todo-checkbox-color: oklch(0.205 0 0);
   --ne-editor-content-todo-checkbox-border-color: oklch(0.145 0 0);
 
@@ -356,6 +361,11 @@
   --ne-editor-content-callout-warning-background-color: oklch(0.2246 0.0538 76.04);
   --ne-editor-content-callout-error-background-color: oklch(0.221 0.0657 15.11);
   --ne-editor-content-callout-success-background-color: oklch(0.2309 0.0716 149.68);
+
+  --ne-editor-content-callout-info-foreground-color: oklch(0.71 0.16 254);
+  --ne-editor-content-callout-warning-foreground-color: oklch(0.83 0.17 82);
+  --ne-editor-content-callout-error-foreground-color: oklch(0.71 0.19 22);
+  --ne-editor-content-callout-success-foreground-color: oklch(0.79 0.21 145);
 
   --ne-editor-content-todo-checkbox-color: oklch(0.922 0 0);
   --ne-editor-content-todo-checkbox-border-color: oklch(0.985 0 0);
